03-demoboard/kubernetes/monitoring-lgtm.eks.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vm00
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lgtm
  namespace: vm00
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lgtm
  template:
    metadata:
      labels:
        app: lgtm
    spec:
      containers:
        - name: lgtm
          image: docker.io/grafana/otel-lgtm@sha256:b966ea107831d526d9eb8fe4d2d86c9e5731392fad9dce8296bcf2072031f07c
          ports:
            - containerPort: 3000
            - containerPort: 3100
            - containerPort: 3200
            - containerPort: 4040
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 9090
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lgtm-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: vm00
spec:
  selector:
    app: lgtm
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: vm00
spec:
  selector:
    app: lgtm
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: vm00
spec:
  selector:
    app: lgtm
  ports:
    - name: http
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: lgtm
  namespace: vm00
spec:
  selector:
    app: lgtm
  ports:
    - name: loki
      port: 3100
      targetPort: 3100
    - name: tempo
      port: 3200
      targetPort: 3200
    - name: pyroscope
      port: 4040
      targetPort: 4040
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: vm00
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      serviceAccountName: promtail
      containers:
        - name: promtail
          image: docker.io/grafana/promtail@sha256:a664933980b493236f4f682a90f5e02b2b3e8fd56ca95c8dc1aeb3be1ff55f9b
          args:
            - -config.file=/etc/promtail/config.yml
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
            - name: positions
              mountPath: /run/promtail
            - name: varlog
              mountPath: /var/log
              readOnly: true
          securityContext:
            runAsUser: 0
      volumes:
        - name: config
          configMap:
            name: promtail-config
        - name: positions
          emptyDir: {}
        - name: varlog
          hostPath:
            path: /var/log---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: vm00
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana-vm00.eks00.tpcsonline.org
      secretName: tls-certificate
  rules:
    - host: grafana-vm00.eks00.tpcsonline.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: vm00
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus-vm00.eks00.tpcsonline.org
      secretName: tls-certificate
  rules:
    - host: prometheus-vm00.eks00.tpcsonline.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
